--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "type": "git",
     "url": "git+https://github.com/tucn/localai-pr-review.git"
   },
-  "keywords": ["localai", "ai-pr-review"],
+  "keywords": [
+    "localai",
+    "ai-pr-review"
+  ],
   "author": "tucn",
   "license": "MIT",
   "bugs": {
@@ -19,6 +22,11 @@
   },
   "homepage": "https://github.com/tucn/localai-pr-review#readme",
   "dependencies": {
+    "@vercel/ncc": "^0.38.1",
+    "act": "^0.0.6",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7"
   }
 }
