Add basic action params

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Run my action
         uses: ./
+        with:
+          url: "http://localhost:8080/api/chat/completions"
+          token: "sometoken"
