--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/tucn/localai-pr-review#readme",
   "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@vercel/ncc": "^0.38.1",
     "act": "^0.0.6",
+    "dedent": "^1.5.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
